--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
+    "@heroicons/react": "^1.0.5",
+    "date-fns": "^2.28.0",
+    "geolib": "^3.3.3",
+    "init": "^0.1.2",
     "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
+    "react-dom": "17.0.2",
+    "react-map-gl": "^6.1.18",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "autoprefixer": "^10.4.0",
+    "eslint": "8.4.1",
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.1"
   }
 }
